package design.proxy.proxyservice;

/**
 * description:<演艺圈>
 *
 * @author 武亚军 (yajun.wu@ucarinc.com)
 * @version 1.0
 * @date 2019/8/6 9:57
 */
public interface EntertainmentCircle {

    /**
     * description:<唱歌>
     *
     * @author 武亚军 (yajun.wu@ucarinc.com)
     * @date 2019/8/6 9:58
     */
    void song();

    /**
     * description:<跳舞>
     *
     * @author 武亚军 (yajun.wu@ucarinc.com)
     * @date 2019/8/6 9:58
     */
    void dence();


}
